--- a/works/cb.html
+++ b/works/cb.html
@@ -58,9 +58,18 @@ https://www.iconfinder.com/marcosebald
 	<div class="buffer"></div>
 	<div id="banner" class="container">
     		<div id="slides">
-		<img src="https://cloud.githubusercontent.com/assets/16012579/12282961/2af0126a-b968-11e5-9e56-a34181bbb2aa.png" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12282962/2b09b468-b968-11e5-9584-e8cfe392cf14.jpg" alt="#">
+		<img src="https://cloud.githubusercontent.com/assets/16012579/12283669/2fe05afe-b96e-11e5-81a2-c90271557eaa.png" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283670/2fe0c1a6-b96e-11e5-82f4-41bf16044162.png" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283668/2fe06666-b96e-11e5-832b-4520ad36fa73.jpg" alt="#">
+      		<img src="(https://cloud.githubusercontent.com/assets/16012579/12283671/2fe2d1d0-b96e-11e5-9f1b-9f0caf0f8a3e.jpg" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283702/8d58c39c-b96e-11e5-9903-48c32c3e39db.PNG" alt="#">
       		<img src="https://cloud.githubusercontent.com/assets/16012579/12282963/2b0ee640-b968-11e5-85d7-d50c5d7a0993.JPG" alt="#">
+      		<img src="(https://cloud.githubusercontent.com/assets/16012579/12283700/8d5685d2-b96e-11e5-8b2f-26265b64b87b.PNG" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283701/8d56b372-b96e-11e5-91ca-989426fb9063.PNG" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283704/8d5a6332-b96e-11e5-92ee-ba818321479c.gif" alt="#">
+      	      	<img src="https://cloud.githubusercontent.com/assets/16012579/12283703/8d5a5504-b96e-11e5-9684-491ff4bc8f08.gif" alt="#">
+      		<img src="(https://cloud.githubusercontent.com/assets/16012579/12283705/8d5cda40-b96e-11e5-9f38-fd0d05a7651c.gif" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283706/8d72cae4-b96e-11e5-97f1-5b14931419c6.PNG" alt="#">
       		<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_left</i></a>
       		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
     		</div>
