--- a/works/hpv.html
+++ b/works/hpv.html
@@ -15,14 +15,15 @@ https://www.iconfinder.com/marcosebald
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title></title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
+<meta name="description" content="Web development examples. Uses SlidesJS, a simple slideshow plugin for jQuery.">
+<meta name="viewport" content="width=device-width">
+<title>web dev examples</title>
+<meta name="keywords" content="Web Development" />
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="default.css" rel="stylesheet" type="text/css" media="all" />
-<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
-
+<link href="../default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../fonts.css" rel="stylesheet" type="text/css" media="all" />
+<link rel="stylesheet" href="../words/font-awesome.min.css">
 <!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
 </head>
@@ -35,34 +36,64 @@ https://www.iconfinder.com/marcosebald
 		</div>
 		<div id="menu">
 			<ul>
-				<li><a href="index.html" accesskey="1" title="">Homepage</a></li>
+				<li><a href="../index.html" accesskey="1" title="">Homepage</a></li>
 				<li><a href="works.html" accesskey="2" title="">Works</a></li>
-				<li><a href="words.html" accesskey="3" title="">Words</a></li>
-				<li><a href="contact.html" accesskey="4" title="">Waterfall</a></li>
+				<li><a href="../word/words.html" accesskey="3" title="">Words</a></li>
+				<li><a href="../contact.html" accesskey="4" title="">Waterfall</a></li>
 			</ul>
 		</div>
 	</div>
 </div>
+
 <div class="wrapper">
-	<div id="banner" class="container"><img src="https://daguchi.files.wordpress.com/2015/01/lego-print-ad.jpg" width="1200" height="500" alt="" /></div>
-</div>
-<div class="wrapper">
-	<div id="banner" class="container"><img src="https://daguchi.files.wordpress.com/2015/01/lego-print-ad.jpg" width="1200" height="500" alt="" /></div>
-</div>
-<div class="wrapper">
-	<div id="banner" class="container"><img src="https://daguchi.files.wordpress.com/2015/01/lego-print-ad.jpg" width="1200" height="500" alt="" /></div>
-</div>
-<div class="wrapper">
-	<div id="banner" class="container"><img src="https://daguchi.files.wordpress.com/2015/01/lego-print-ad.jpg" width="1200" height="500" alt="" /></div>
-</div>
-<div class="wrapper">
-	<div id="banner" class="container"><img src="https://daguchi.files.wordpress.com/2015/01/lego-print-ad.jpg" width="1200" height="500" alt="" /></div>
-</div>
-<div class="wrapper">
-	<div id="banner" class="container"><img src="https://daguchi.files.wordpress.com/2015/01/lego-print-ad.jpg" width="1200" height="500" alt="" /></div>
-</div>
-<div class="wrapper">
-	<div id="banner" class="container"><img src="https://daguchi.files.wordpress.com/2015/01/lego-print-ad.jpg" width="1200" height="500" alt="" /></div>
+	<div id="banner" class="container">
+		<h1>Missouri S&T Human Powered Vehicle</h1>
+	</div>
+	<div id="banner" class="container">
+		<p><b>Human Powered Vehicle</b> is an ASME sponsored college student design competition focues on the design and construction of high efficiency human powered vehicles.</p>
+		<p><b>One such medical device is the S+A Technologies Dermal Curette.</b></p>
+		<p>Much like the dichotomy between reusable shaving razors and plastic disposable razors, S+A Dermal Curettes aim to combine the professional precision feel of tradiotion Dermal Curettes with the affordability and low maintenance of disposable curettes.</p>
+		<p>S+A Dermal Curettes utilize an easy to exchange stainless steel blade mounted on a stainless steel handle. Eliminating the ecological impact of disposable blades while sustaining the precision of traditional systems.</p>
+	</div>
+	<div class="buffer"></div>
+	<div id="banner" class="container">
+    		<div id="slides">
+		<img src="https://cloud.githubusercontent.com/assets/16012579/12283669/2fe05afe-b96e-11e5-81a2-c90271557eaa.png" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283670/2fe0c1a6-b96e-11e5-82f4-41bf16044162.png" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283668/2fe06666-b96e-11e5-832b-4520ad36fa73.jpg" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283671/2fe2d1d0-b96e-11e5-9f1b-9f0caf0f8a3e.jpg" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283702/8d58c39c-b96e-11e5-9903-48c32c3e39db.PNG" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12282963/2b0ee640-b968-11e5-85d7-d50c5d7a0993.JPG" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283700/8d5685d2-b96e-11e5-8b2f-26265b64b87b.PNG" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283701/8d56b372-b96e-11e5-91ca-989426fb9063.PNG" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283704/8d5a6332-b96e-11e5-92ee-ba818321479c.gif" alt="#">
+      	      	<img src="https://cloud.githubusercontent.com/assets/16012579/12283703/8d5a5504-b96e-11e5-9684-491ff4bc8f08.gif" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283705/8d5cda40-b96e-11e5-9f38-fd0d05a7651c.gif" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283706/8d72cae4-b96e-11e5-97f1-5b14931419c6.PNG" alt="#">
+      		<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_left</i></a>
+      		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
+    		</div>
+	</div>
+	
+  <!-- SlidesJS Required: Link to jQuery -->
+  <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <!-- End SlidesJS Required -->
+
+  <!-- SlidesJS Required: Link to jquery.slides.js -->
+  <script src="../words/jquery.slides.min.js"></script>
+  <!-- End SlidesJS Required -->
+
+  <!-- SlidesJS Required: Initialize SlidesJS with a jQuery doc ready -->
+  <script>
+    $(function() {
+      $('#slides').slidesjs({
+        width: 940,
+        height: 528,
+        navigation: false
+      });
+    });
+  </script>
+
 </div>
 <div id="footer">
 	<div class="container">
