--- a/works/cb.html
+++ b/works/cb.html
@@ -74,7 +74,36 @@ https://www.iconfinder.com/marcosebald
       		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
     		</div>
 	</div>
-	
+	<h2>Blades and Handle</h2>
+	<div id="banner" class="container">
+    		<div id="slides">
+		 <img src="https://cloud.githubusercontent.com/assets/16012579/12282961/2af0126a-b968-11e5-9e56-a34181bbb2aa.png" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12282962/2b09b468-b968-11e5-9584-e8cfe392cf14.jpg" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12282963/2b0ee640-b968-11e5-85d7-d50c5d7a0993.JPG" alt="#">
+      		<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_left</i></a>
+      		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
+    		</div>
+	</div>
+	<h2>Sharpening Machine</h2>
+	<div id="banner" class="container">
+    		<div id="slides">
+		 <img src="https://cloud.githubusercontent.com/assets/16012579/12282961/2af0126a-b968-11e5-9e56-a34181bbb2aa.png" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12282962/2b09b468-b968-11e5-9584-e8cfe392cf14.jpg" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12282963/2b0ee640-b968-11e5-85d7-d50c5d7a0993.JPG" alt="#">
+      		<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_left</i></a>
+      		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
+    		</div>
+	</div>
+	<h2>Models and Drawings</h2>
+	<div id="banner" class="container">
+    		<div id="slides">
+		 <img src="https://cloud.githubusercontent.com/assets/16012579/12282961/2af0126a-b968-11e5-9e56-a34181bbb2aa.png" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12282962/2b09b468-b968-11e5-9584-e8cfe392cf14.jpg" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12282963/2b0ee640-b968-11e5-85d7-d50c5d7a0993.JPG" alt="#">
+      		<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_left</i></a>
+      		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
+    		</div>
+	</div>
   <!-- SlidesJS Required: Link to jQuery -->
   <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   <!-- End SlidesJS Required -->
