--- a/works/cb.html
+++ b/works/cb.html
@@ -66,7 +66,7 @@ https://www.iconfinder.com/marcosebald
 		<p>Much like the dichotomy between reusable shaving razors and plastic disposable razors, S+A Dermal Curettes aim to combine the professional precision feel of tradiotion Dermal Curettes with the affordability and low maintenance of disposable curettes.</p>
 		<p>S+A Dermal Curettes utilize an easy to exchange stainless steel blade mounted on a stainless steel handle. Eliminating the ecological impact of disposable blades while sustaining the precision of traditional systems.</p>
 	</div>
-	
+<div class="container">	
 	<h2>Blades and Handle</h2>	
     		<div id="slides">
 		<img src="https://cloud.githubusercontent.com/assets/16012579/12335910/27438ace-bac7-11e5-8347-2108f82c7477.png" alt="#">
@@ -80,7 +80,8 @@ https://www.iconfinder.com/marcosebald
       		<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   		<script src="../words/jquery.slides.min.js"></script>
     		</div>
-
+</div>    		
+<div class="container">
 	<h2>Sharpening Machine</h2>	
     		<div id="slides">
 		<img src="https://cloud.githubusercontent.com/assets/16012579/12336004/9ab9772a-bac7-11e5-9ac7-590a46ebc717.jpg" alt="#">
@@ -92,8 +93,8 @@ https://www.iconfinder.com/marcosebald
       		<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   		<script src="../words/jquery.slides.min.js"></script>
   		</div>
-  
-
+</div>  
+<div class="container">
 	<h2>Models and Drawings</h2>
     		<div id="slides">
 		<img src="https://cloud.githubusercontent.com/assets/16012579/12336057/f6016cf0-bac7-11e5-9133-98226b12a717.JPG" alt="#">
@@ -107,6 +108,7 @@ https://www.iconfinder.com/marcosebald
       		<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script src="../words/jquery.slides.min.js"></script>
 		</div>
+</div>
  </div>
   
 <div id="footer">
