--- a/works/cb.html
+++ b/works/cb.html
@@ -46,6 +46,12 @@ https://www.iconfinder.com/marcosebald
 		</div>
 	</div>
 </div>
+  <!-- SlidesJS Required: Link to jQuery -->
+  <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <!-- End SlidesJS Required -->
+
+  <!-- SlidesJS Required: Link to jquery.slides.js -->
+  <script src="../words/jquery.slides.min.js"></script>
   <script>
     $(function() {
       $('#slides').slidesjs({
