--- a/works/cb.html
+++ b/works/cb.html
@@ -5,7 +5,6 @@ http://templated.co
 Edited by Connor S.
 Released for free under the Creative Commons Attribution License
 Name       : Undeviating 
-Description: A two-column, fixed-width design with dark color scheme.
 Version    : 1.0
 Released   : 20140322
 Icons:
@@ -17,8 +16,8 @@ https://www.iconfinder.com/marcosebald
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="description" content="Web development examples. Uses SlidesJS, a simple slideshow plugin for jQuery.">
 <meta name="viewport" content="width=device-width">
-<title>web dev examples</title>
-<meta name="keywords" content="Web Development" />
+<title>Curetteblade Project</title>
+<meta name="keywords" content="Curetteblade" />
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="../default.css" rel="stylesheet" type="text/css" media="all" />
@@ -71,6 +70,9 @@ https://www.iconfinder.com/marcosebald
 		<p>Much like the dichotomy between reusable shaving razors and plastic disposable razors, S+A Dermal Curettes aim to combine the professional precision feel of tradiotion Dermal Curettes with the affordability and low maintenance of disposable curettes.</p>
 		<p>S+A Dermal Curettes utilize an easy to exchange stainless steel blade mounted on a stainless steel handle. Eliminating the ecological impact of disposable blades while sustaining the precision of traditional systems.</p>
 	</div>
+<div class="container">
+	<iframe width="854" height="480" src="https://www.youtube.com/embed/BnW6Hq_9bAk" frameborder="0" allowfullscreen></iframe>
+</div>
 <div class="container">	
 	<h2>Blades and Handle</h2>	
     		<div id="slides">
