--- a/works/cb.html
+++ b/works/cb.html
@@ -70,53 +70,29 @@ https://www.iconfinder.com/marcosebald
 		<p>Much like the dichotomy between reusable shaving razors and plastic disposable razors, S+A Dermal Curettes aim to combine the professional precision feel of tradiotion Dermal Curettes with the affordability and low maintenance of disposable curettes.</p>
 		<p>S+A Dermal Curettes utilize an easy to exchange stainless steel blade mounted on a stainless steel handle. Eliminating the ecological impact of disposable blades while sustaining the precision of traditional systems.</p>
 	</div>
-<div class="container">
+	<div class="container">
 	<iframe width="854" height="480" src="https://www.youtube.com/embed/BnW6Hq_9bAk" frameborder="0" allowfullscreen></iframe>
-</div>
-<div class="container">	
-	<h2>Blades and Handle</h2>	
+	</div>
+	<div class="container">	
+	<h2>Project Pictures</h2>	
     		<div id="slides">
 		<img src="https://cloud.githubusercontent.com/assets/16012579/12335910/27438ace-bac7-11e5-8347-2108f82c7477.png" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12335909/27438042-bac7-11e5-8316-86f287c0449e.jpg" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12335907/273e64b8-bac7-11e5-8795-5f4b219b119a.JPG" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12335911/2743ffcc-bac7-11e5-9dea-9a2ba0ec8c66.jpg" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12335908/2741077c-bac7-11e5-9731-eeda5caef344.PNG" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12335906/273d0c12-bac7-11e5-9cff-dcc39be95dc9.PNG" alt="#">
-      		<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_left</i></a>
-      		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
-      		<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-  		<script src="../words/jquery.slides.min.js"></script>
-    		</div>
-</div>    		
-<div class="container">
-	<h2>Sharpening Machine</h2>	
-    		<div id="slides">
-		<img src="https://cloud.githubusercontent.com/assets/16012579/12336004/9ab9772a-bac7-11e5-9ac7-590a46ebc717.jpg" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12336003/9ab4725c-bac7-11e5-8090-3ab1d632269e.jpg" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12336002/9ab3f49e-bac7-11e5-88cc-1e1bdc27a7a4.jpg" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12336001/9ab23b04-bac7-11e5-8aab-09f6e4303dff.jpg" alt="#">
-      		<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_left</i></a>
-      		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
-      		<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-  		<script src="../words/jquery.slides.min.js"></script>
-  		</div>
-</div>  
-<div class="container">
-	<h2>Models and Drawings</h2>
-    		<div id="slides">
-		<img src="https://cloud.githubusercontent.com/assets/16012579/12336057/f6016cf0-bac7-11e5-9133-98226b12a717.JPG" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12336058/f602378e-bac7-11e5-9c37-a7d15c7f8b2d.JPG" alt="#">
+		<img src="https://cloud.githubusercontent.com/assets/16012579/12283671/2fe2d1d0-b96e-11e5-9f1b-9f0caf0f8a3e.jpg" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283668/2fe06666-b96e-11e5-832b-4520ad36fa73.jpg" alt="#">
+      	      	<img src="https://cloud.githubusercontent.com/assets/16012579/12337068/7a4e0900-bacd-11e5-9d23-fef2ef3ca7ec.JPG" alt="#">      		
       		<img src="https://cloud.githubusercontent.com/assets/16012579/12336059/f606ba5c-bac7-11e5-913f-1983a1cc7ea3.JPG" alt="#">
-     		<img src="https://cloud.githubusercontent.com/assets/16012579/12283704/8d5a6332-b96e-11e5-92ee-ba818321479c.gif" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12336058/f602378e-bac7-11e5-9c37-a7d15c7f8b2d.JPG" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12335908/2741077c-bac7-11e5-9731-eeda5caef344.PNG" alt="#">
       		<img src="https://cloud.githubusercontent.com/assets/16012579/12283703/8d5a5504-b96e-11e5-9684-491ff4bc8f08.gif" alt="#">
       		<img src="https://cloud.githubusercontent.com/assets/16012579/12283705/8d5cda40-b96e-11e5-9f38-fd0d05a7651c.gif" alt="#">
       		<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_left</i></a>
       		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
       		<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-		<script src="../words/jquery.slides.min.js"></script>
-		</div>
+  		<script src="../words/jquery.slides.min.js"></script>
+    		</div>
+	</div>    		
+
 </div>
- </div>
   
 <div id="footer">
 	<div class="container">
