--- a/works/cb.html
+++ b/works/cb.html
@@ -64,15 +64,15 @@ https://www.iconfinder.com/marcosebald
 	<div id="banner" class="container">
 		<h1>S+A Technologies Dermal Curette</h1>
 	</div>
-	<div id="banner" class="container">
+	<div id="banner" class="container" >
 		<p><b>S+A Technologies</b> is a small company based out of Rolla Missouri focused on medical innovations ranging from medical apparatus to telemedicine.</p>
 		<p><b>One such medical device is the S+A Technologies Dermal Curette.</b></p>
 		<p>Much like the dichotomy between reusable shaving razors and plastic disposable razors, S+A Dermal Curettes aim to combine the professional precision feel of tradiotion Dermal Curettes with the affordability and low maintenance of disposable curettes.</p>
 		<p>S+A Dermal Curettes utilize an easy to exchange stainless steel blade mounted on a stainless steel handle. Eliminating the ecological impact of disposable blades while sustaining the precision of traditional systems.</p>
 	</div>
-	<div class="container">
+	<div class="container video">
 	<h2>Promo Video</h2>
-	<iframe class="video" width="854" height="480" src="https://www.youtube.com/embed/BnW6Hq_9bAk" frameborder="0" allowfullscreen></iframe>
+	<iframe  width="854" height="480" src="https://www.youtube.com/embed/BnW6Hq_9bAk" frameborder="0" allowfullscreen></iframe>
 	</div>
 
 	<div class="container">	
