--- a/works/cb.html
+++ b/works/cb.html
@@ -70,8 +70,8 @@ https://www.iconfinder.com/marcosebald
 		<p>Much like the dichotomy between reusable shaving razors and plastic disposable razors, S+A Dermal Curettes aim to combine the professional precision feel of tradiotion Dermal Curettes with the affordability and low maintenance of disposable curettes.</p>
 		<p>S+A Dermal Curettes utilize an easy to exchange stainless steel blade mounted on a stainless steel handle. Eliminating the ecological impact of disposable blades while sustaining the precision of traditional systems.</p>
 	</div>
-	<div class="container video">
 	<h2>Promo Video</h2>
+	<div class="video">
 	<iframe  width="854" height="480" src="https://www.youtube.com/embed/BnW6Hq_9bAk" frameborder="0" allowfullscreen></iframe>
 	</div>
 
