--- a/works/cb.html
+++ b/works/cb.html
@@ -72,9 +72,7 @@ https://www.iconfinder.com/marcosebald
 	</div>
 	<div class="container">
 	<h2>Promo Video</h2>
-		<div class="video">
-		<iframe  width="854" height="480" src="https://www.youtube.com/embed/BnW6Hq_9bAk" frameborder="0" allowfullscreen></iframe>
-		</div>
+	<iframe class="video" width="854" height="480" src="https://www.youtube.com/embed/BnW6Hq_9bAk" frameborder="1px" allowfullscreen></iframe>
 	</div>
 
 	<div class="container">	
