--- a/works/cb.html
+++ b/works/cb.html
@@ -72,7 +72,9 @@ https://www.iconfinder.com/marcosebald
 	</div>
 	<div class="container">
 	<h2>Promo Video</h2>
-	<iframe class="video-center" width="854" height="480" src="https://www.youtube.com/embed/BnW6Hq_9bAk" frameborder="0" allowfullscreen></iframe>
+	<div class="video-center">
+	<iframe width="854" height="480" src="https://www.youtube.com/embed/BnW6Hq_9bAk" frameborder="0" allowfullscreen></iframe>
+	</div>
 	</div>
 
 	<div class="container">	
