--- a/works/cb.html
+++ b/works/cb.html
@@ -79,7 +79,7 @@ https://www.iconfinder.com/marcosebald
 
 	<div class="container">	
 	<h2>Project Pictures</h2>	
-    		<div id="slides">
+    		<div id="slides" style="border: 2px solid black">
 		<img src="https://cloud.githubusercontent.com/assets/16012579/12335910/27438ace-bac7-11e5-8347-2108f82c7477.png" alt="#">
 		<img src="https://cloud.githubusercontent.com/assets/16012579/12283671/2fe2d1d0-b96e-11e5-9f1b-9f0caf0f8a3e.jpg" alt="#">
       		<img src="https://cloud.githubusercontent.com/assets/16012579/12337164/02efeb0c-bace-11e5-8341-b50042e0890a.jpg" alt="#">
