--- a/works/cb.html
+++ b/works/cb.html
@@ -72,13 +72,15 @@ https://www.iconfinder.com/marcosebald
 	</div>
 	<div class="container border2">
 	<h2>Promo Video</h2>
+	<HR color="#AAAAAA">
 	<div class="video-center">
 	<iframe width="854" height="480" src="https://www.youtube.com/embed/BnW6Hq_9bAk" frameborder="0" allowfullscreen></iframe>
 	</div>
 	</div>
 
 	<div class="container">	
-	<h2>Project Pictures</h2>	
+	<h2>Project Pictures</h2>
+	<HR color="#AAAAAA">
     		<div id="slides" class="border2">
 		<img src="https://cloud.githubusercontent.com/assets/16012579/12335910/27438ace-bac7-11e5-8347-2108f82c7477.png" alt="#">
 		<img src="https://cloud.githubusercontent.com/assets/16012579/12283671/2fe2d1d0-b96e-11e5-9f1b-9f0caf0f8a3e.jpg" alt="#">
