--- a/works/cb.html
+++ b/works/cb.html
@@ -70,7 +70,7 @@ https://www.iconfinder.com/marcosebald
 		<p>Much like the dichotomy between reusable shaving razors and plastic disposable razors, S+A Dermal Curettes aim to combine the professional precision feel of tradiotion Dermal Curettes with the affordability and low maintenance of disposable curettes.</p>
 		<p>S+A Dermal Curettes utilize an easy to exchange stainless steel blade mounted on a stainless steel handle. Eliminating the ecological impact of disposable blades while sustaining the precision of traditional systems.</p>
 	</div>
-	<div class="container border2">
+	<div class="container">
 	<h2>Promo Video</h2>
 	<HR color="#AAAAAA">
 	<div class="video-center">
@@ -81,7 +81,7 @@ https://www.iconfinder.com/marcosebald
 	<div class="container">	
 	<h2>Project Pictures</h2>
 	<HR color="#AAAAAA">
-    		<div id="slides" class="border2">
+    		<div id="slides" class="#">
 		<img src="https://cloud.githubusercontent.com/assets/16012579/12335910/27438ace-bac7-11e5-8347-2108f82c7477.png" alt="#">
 		<img src="https://cloud.githubusercontent.com/assets/16012579/12283671/2fe2d1d0-b96e-11e5-9f1b-9f0caf0f8a3e.jpg" alt="#">
       		<img src="https://cloud.githubusercontent.com/assets/16012579/12337164/02efeb0c-bace-11e5-8341-b50042e0890a.jpg" alt="#">
