--- a/works/cb.html
+++ b/works/cb.html
@@ -63,6 +63,7 @@ https://www.iconfinder.com/marcosebald
 <div class="wrapper">
 	<div id="banner" class="container">
 		<h1>S+A Technologies Dermal Curette</h1>
+		<HR color="#AAAAAA">
 	</div>
 	<div id="banner" class="container" >
 		<p><b>S+A Technologies</b> is a small company based out of Rolla Missouri focused on medical innovations ranging from medical apparatus to telemedicine.</p>
