--- a/works/works.html
+++ b/works/works.html
@@ -50,7 +50,7 @@ https://www.iconfinder.com/marcosebald
 		<div id="tbox1">
 			<div class="title">
 				<h2 href="simplysolar.html">Simply Solar</h2>
-				<a href="simplysolar.html"><img src="https://cloud.githubusercontent.com/assets/16012579/12244650/56c41700-b86a-11e5-869f-317a9b9da603.jpg" class="column-image"></a>
+				<a href="simplysolar.html"><img src="https://cloud.githubusercontent.com/assets/16012579/12282961/2af0126a-b968-11e5-9e56-a34181bbb2aa.png" class="column-image"></a>
 			</div>
 			<p>An affordable, durable, modular solar collection and storage concept for use in public spaces.</p>
 			<a href="pubworks.html" class="button">Learn More</a> </div>
