--- a/words/words.html
+++ b/words/words.html
@@ -52,7 +52,7 @@ https://www.iconfinder.com/marcosebald
 		<div id="tbox1">
 			<div class="title">
 				<h2>Published Works</h2>
-				<a href="pubworks.html"><img src="#" class="column-image"></a>
+				<a href="pubworks.html"><img src="http://design.bryantstratton.edu/students/ro.paredes.maxine/100/project1/images/published.jpg" class="column-image"></a>
 			</div>
 			<p>On this page you will find links to my published works as well as works in progress.</p>
 			<a href="pubworks.html" class="button">Learn More</a> </div>
@@ -66,7 +66,7 @@ https://www.iconfinder.com/marcosebald
 		<div id="tbox3">
 			<div class="title">
 				<h2>Matlab</h2>
-				<a href="matlab.html"><img src="#" class="column-image"></a>
+				<a href="matlab.html"><img src="https://www.onetick.com/web/images/logo/matlab.png" class="column-image"></a>
 			</div>
 			<p>On this page you will find projects and assignments I have completed using Matlab.</p>
 			<a href="matlab.html" class="button">Learn More</a> </div>
@@ -77,7 +77,7 @@ https://www.iconfinder.com/marcosebald
 		<div id="tbox1">
 			<div class="title">
 				<h2>C++</h2>
-				<a href="cplus.html"><img src="#" class="column-image"></a>
+				<a href="cplus.html"><img src="http://www.brandsoftheworld.com/sites/default/files/styles/logo-thumbnail/public/042014/c_0.png?itok=NGrw5nRV" class="column-image"></a>
 			</div>
 			<p>On this page you will find projects and assignments I have completed using C++</p>
 			<a href="cplus.html" class="button">Learn More</a> </div>
@@ -91,7 +91,7 @@ https://www.iconfinder.com/marcosebald
 		<div id="tbox3">
 			<div class="title">
 				<h2>Android</h2>
-				<a href="android.html"><img src="#" class="column-image"></a>
+				<a href="android.html"><img src="http://famouslogos.net/images/android-logo.jpg" class="column-image"></a>
 			</div>
 			<p>On this page you will find Android projects I have worked on and been a part of.</p>
 			<a href="android.html" class="button">Learn More</a> </div>
