--- a/words/words.html
+++ b/words/words.html
@@ -79,7 +79,7 @@ https://www.iconfinder.com/marcosebald
 				<h2>C++</h2>
 				<a href="cplus.html"><img src="http://www.brandsoftheworld.com/sites/default/files/styles/logo-thumbnail/public/042014/c_0.png?itok=NGrw5nRV" class="column-image"></a>
 			</div>
-			<p>On this page you will find projects and assignments I have completed in the past in the C++ language.</p>
+			<p>On this page you will find projects and assignments I have completed in the past with the C++ language.</p>
 			<a href="cplus.html" class="button">Learn More</a> </div>
 		<div id="tbox2">
 			<div class="title">
