--- a/works/hpv.html
+++ b/works/hpv.html
@@ -38,7 +38,7 @@ https://www.iconfinder.com/marcosebald
 			<ul>
 				<li><a href="../index.html" accesskey="1" title="">Homepage</a></li>
 				<li><a href="works.html" accesskey="2" title="">Works</a></li>
-				<li><a href="../word/words.html" accesskey="3" title="">Words</a></li>
+				<li><a href="../words/words.html" accesskey="3" title="">Words</a></li>
 				<li><a href="../contact.html" accesskey="4" title="">Waterfall</a></li>
 			</ul>
 		</div>
@@ -51,28 +51,25 @@ https://www.iconfinder.com/marcosebald
 	</div>
 	<div id="banner" class="container">
 		<p><b>Human Powered Vehicle</b> is an ASME sponsored college student design competition focues on the design and construction of high efficiency human powered vehicles.</p>
-		<p><b>One such medical device is the S+A Technologies Dermal Curette.</b></p>
-		<p>Much like the dichotomy between reusable shaving razors and plastic disposable razors, S+A Dermal Curettes aim to combine the professional precision feel of tradiotion Dermal Curettes with the affordability and low maintenance of disposable curettes.</p>
-		<p>S+A Dermal Curettes utilize an easy to exchange stainless steel blade mounted on a stainless steel handle. Eliminating the ecological impact of disposable blades while sustaining the precision of traditional systems.</p>
+		<p>I have participated on the Missouri S&T Human Powered Vehicle team since December of 2013.</p>
+		<p>I took on the position of Lead Fairing Engineer for the 2015 season. I was responsible for a team of 5 as well as the design and construction of the vehicle's composite fairing.</p>
 	</div>
-	<div class="buffer"></div>
+	<HR color="#AAAAAA">
+	<h2>Videos</h2>
+	<iframe width="854" height="480" src="https://www.youtube.com/embed/Vfa0sh6acIY" frameborder="0" allowfullscreen></iframe>
+	<HR color="#AAAAAA">
+	<h2>Pictures</h2>
 	<div id="banner" class="container">
     		<div id="slides">
-		<img src="https://cloud.githubusercontent.com/assets/16012579/12283669/2fe05afe-b96e-11e5-81a2-c90271557eaa.png" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283670/2fe0c1a6-b96e-11e5-82f4-41bf16044162.png" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283668/2fe06666-b96e-11e5-832b-4520ad36fa73.jpg" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283671/2fe2d1d0-b96e-11e5-9f1b-9f0caf0f8a3e.jpg" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283702/8d58c39c-b96e-11e5-9903-48c32c3e39db.PNG" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12282963/2b0ee640-b968-11e5-85d7-d50c5d7a0993.JPG" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283700/8d5685d2-b96e-11e5-8b2f-26265b64b87b.PNG" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283701/8d56b372-b96e-11e5-91ca-989426fb9063.PNG" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283704/8d5a6332-b96e-11e5-92ee-ba818321479c.gif" alt="#">
-      	      	<img src="https://cloud.githubusercontent.com/assets/16012579/12283703/8d5a5504-b96e-11e5-9684-491ff4bc8f08.gif" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283705/8d5cda40-b96e-11e5-9f38-fd0d05a7651c.gif" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12283706/8d72cae4-b96e-11e5-97f1-5b14931419c6.PNG" alt="#">
-      		<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_left</i></a>
-      		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
+		<img src="https://cloud.githubusercontent.com/assets/16012579/12364177/d36de5b2-bb92-11e5-9ed9-d942b4ef6259.jpg" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12364184/d37e2e22-bb92-11e5-88c4-df0c14d94a53.jpg" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12364179/d36e6b86-bb92-11e5-96b9-afb5c644b78b.jpg" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12364180/d36f01a4-bb92-11e5-9275-64f4c2a7830a.jpg" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12364183/d37dbc08-bb92-11e5-94cf-742171f04496.jpg" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12364182/d376d550-bb92-11e5-8747-26919fc2329f.jpg" alt="#">
     		</div>
+    		<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_left</i></a>
+      		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
 	</div>
 	
   <!-- SlidesJS Required: Link to jQuery -->
