--- a/works/hpv.html
+++ b/works/hpv.html
@@ -53,13 +53,16 @@ https://www.iconfinder.com/marcosebald
 		<p><b>Human Powered Vehicle</b> is an ASME sponsored college student design competition focues on the design and construction of high efficiency human powered vehicles.</p>
 		<p>I have participated on the Missouri S&T Human Powered Vehicle team since December of 2013.</p>
 		<p>I took on the position of Lead Fairing Engineer for the 2015 season. I was responsible for a team of 5 as well as the design and construction of the vehicle's composite fairing.</p>
-	</div>
 	<HR color="#AAAAAA">
+	</div>
+	<div class="container">
 	<h2>Videos</h2>
 	<iframe width="854" height="480" src="https://www.youtube.com/embed/Vfa0sh6acIY" frameborder="0" allowfullscreen></iframe>
 	<HR color="#AAAAAA">
-	<h2>Pictures</h2>
+	</div>
+	
 	<div id="banner" class="container">
+		<h2>Pictures</h2>
     		<div id="slides">
 		<img src="https://cloud.githubusercontent.com/assets/16012579/12364177/d36de5b2-bb92-11e5-9ed9-d942b4ef6259.jpg" alt="#">
       		<img src="https://cloud.githubusercontent.com/assets/16012579/12364184/d37e2e22-bb92-11e5-88c4-df0c14d94a53.jpg" alt="#">
