--- a/works/hpv.html
+++ b/works/hpv.html
@@ -15,10 +15,10 @@ https://www.iconfinder.com/marcosebald
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="description" content="Web development examples. Uses SlidesJS, a simple slideshow plugin for jQuery.">
+<meta name="description" content="Human Powered Vehicle. Uses SlidesJS, a simple slideshow plugin for jQuery.">
 <meta name="viewport" content="width=device-width">
-<title>web dev examples</title>
-<meta name="keywords" content="Web Development" />
+<title>Human Powered Vehicle</title>
+<meta name="keywords" content="Connor Sprague, Human Powered Vehicle" />
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="../default.css" rel="stylesheet" type="text/css" media="all" />
@@ -57,7 +57,9 @@ https://www.iconfinder.com/marcosebald
 	</div>
 	<div class="container">
 	<h2>Videos</h2>
+	<div class="video-center">
 	<iframe width="854" height="480" src="https://www.youtube.com/embed/Vfa0sh6acIY" frameborder="0" allowfullscreen></iframe>
+	</div>
 	<HR color="#AAAAAA">
 	</div>
 	
