--- a/works/hpv.html
+++ b/works/hpv.html
@@ -15,6 +15,7 @@ https://www.iconfinder.com/marcosebald
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="shortcut icon" href="https://cloud.githubusercontent.com/assets/16012579/12364934/3d99abc0-bb97-11e5-9c72-5c8841c214af.png">
 <meta name="description" content="Human Powered Vehicle. Uses SlidesJS, a simple slideshow plugin for jQuery.">
 <meta name="viewport" content="width=device-width">
 <title>Human Powered Vehicle</title>
@@ -67,7 +68,6 @@ https://www.iconfinder.com/marcosebald
 		<HR color="#AAAAAA">
     			<div id="slides">
 			<img src="https://cloud.githubusercontent.com/assets/16012579/12364177/d36de5b2-bb92-11e5-9ed9-d942b4ef6259.jpg" alt="#">
-      			<img src="https://cloud.githubusercontent.com/assets/16012579/12364783/4e3c0b36-bb96-11e5-9aaf-40422b20bc07.jpg" alt="#">
       			<img src="https://cloud.githubusercontent.com/assets/16012579/12364573/066bde9a-bb95-11e5-9988-feab14a880eb.PNG" alt="#">
       			<img src="https://cloud.githubusercontent.com/assets/16012579/12364574/0679906c-bb95-11e5-9387-90f1c2912fee.PNG" alt="#">
       			<img src="https://cloud.githubusercontent.com/assets/16012579/12364575/067ad4cc-bb95-11e5-85f8-b273c9ea7d16.PNG" alt="#">
