--- a/works/hpv.html
+++ b/works/hpv.html
@@ -15,7 +15,7 @@ https://www.iconfinder.com/marcosebald
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="shortcut icon" href="https://cloud.githubusercontent.com/assets/16012579/12364934/3d99abc0-bb97-11e5-9c72-5c8841c214af.png">
+<link rel="icon" type="image/png" href="https://cloud.githubusercontent.com/assets/16012579/12364939/3f4a9e84-bb97-11e5-906c-40af48fdf731.png" sizes="16x16" />
 <meta name="description" content="Human Powered Vehicle. Uses SlidesJS, a simple slideshow plugin for jQuery.">
 <meta name="viewport" content="width=device-width">
 <title>Human Powered Vehicle</title>
