--- a/words/words.html
+++ b/words/words.html
@@ -48,7 +48,7 @@ https://www.iconfinder.com/marcosebald
 </div>
 	
  <div class="wrapper" id="wrapper1">
-	<div  class="container">
+	<div id="three-column" class="container">
 
 		<div id="tbox1">
 			<div class="title">
