--- a/words/words.html
+++ b/words/words.html
@@ -56,7 +56,7 @@ https://www.iconfinder.com/marcosebald
 				<h2>Research</h2>
 				<a href="research.html"><img src="http://design.bryantstratton.edu/students/ro.paredes.maxine/100/project1/images/published.jpg" class="column-image"></a>
 			</div>
-			<p class="two-column-text">On this page you will find links to research work and assignments that were not published.</p>
+			<p class="two-column-text">On this page you will find links to research work both published and in progress.</p>
 			<a href="research.html" class="button border1">Explore</a>
 		</div>
 		<div id="right" >
