--- a/works/simplysolar.html
+++ b/works/simplysolar.html
@@ -72,6 +72,21 @@ https://www.iconfinder.com/marcosebald
     });
   </script>
 
+
+	<div class="container">	
+	<h2>Project Pictures</h2>
+	<HR color="#AAAAAA">
+    		<div id="slides" class="#">
+		<img src="https://cloud.githubusercontent.com/assets/16012579/12282961/2af0126a-b968-11e5-9e56-a34181bbb2aa.png" alt="#">
+		<img src="https://cloud.githubusercontent.com/assets/16012579/12282962/2b09b468-b968-11e5-9584-e8cfe392cf14.jpg" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12282963/2b0ee640-b968-11e5-85d7-d50c5d7a0993.JPG" alt="#">
+      		<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_left</i></a>
+      		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
+    		</div>
+    		<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+  		<script src="../words/jquery.slides.min.js"></script>
+	</div>
+
 </div>
 <div id="footer">
 	<div class="container">
