--- a/works/simplysolar.html
+++ b/works/simplysolar.html
@@ -15,10 +15,11 @@ https://www.iconfinder.com/marcosebald
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="description" content="Web development examples. Uses SlidesJS, a simple slideshow plugin for jQuery.">
+<link rel="icon" type="image/png" href="https://cloud.githubusercontent.com/assets/16012579/12364939/3f4a9e84-bb97-11e5-906c-40af48fdf731.png" sizes="16x16" />
+<meta name="description" content="Simply Solar Project Page">
 <meta name="viewport" content="width=device-width">
-<title>web dev examples</title>
-<meta name="keywords" content="Web Development" />
+<title>Simply Solar</title>
+<meta name="keywords" content="Solar Energy" />
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="../default.css" rel="stylesheet" type="text/css" media="all" />
@@ -38,7 +39,7 @@ https://www.iconfinder.com/marcosebald
 			<ul>
 				<li><a href="../index.html" accesskey="1" title="">Homepage</a></li>
 				<li><a href="../works/works.html" accesskey="2" title="">Works</a></li>
-				<li><a href="../words/words.html" accesskey="3" title="">Words</a></li>
+				<li><a href="words.html" accesskey="3" title="">Words</a></li>
 				<li><a href="../contact.html" accesskey="4" title="">Waterfall</a></li>
 			</ul>
 		</div>
