--- a/words/research.html
+++ b/words/research.html
@@ -1,1 +1,111 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!--
+Design by TEMPLATED
+http://templated.co
+Edited by Connor S.
+Released for free under the Creative Commons Attribution License
+Name       : Undeviating 
+Version    : 1.0
+Released   : 20140322
+Icons:
+Google Icons
+https://www.iconfinder.com/marcosebald
+-->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="icon" type="image/png" href="https://cloud.githubusercontent.com/assets/16012579/12364939/3f4a9e84-bb97-11e5-906c-40af48fdf731.png" sizes="16x16" />
+<meta name="description" content="Research Work">
+<meta name="viewport" content="width=device-width">
+<title>Researchr</title>
+<meta name="keywords" content="Research" />
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="../default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../fonts.css" rel="stylesheet" type="text/css" media="all" />
+<link rel="stylesheet" href="../words/font-awesome.min.css">
+<!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
+
+</head>
+<body>
+<div id="header-wrapper">
+	<div id="header" class="container">
+		<div id="logo">
+        	<i class="material-icons md-48 md-light">face</i>
+			<h1><a href="https://www.facebook.com/connor.sprague.9">Connor S.</a></h1>
+		</div>
+		<div id="menu">
+			<ul>
+				<li><a href="../index.html" accesskey="1" title="">Homepage</a></li>
+				<li><a href="../works/works.html" accesskey="2" title="">Works</a></li>
+				<li><a href="words.html" accesskey="3" title="">Words</a></li>
+				<li><a href="../contact.html" accesskey="4" title="">Waterfall</a></li>
+			</ul>
+		</div>
+	</div>
+</div>
+
+<div class="wrapper">
+	<div id="banner" class="container">
+		<h1>Gamification</h1>
+		<HR color="#AAAAAA">
+		<p>The goal of the Simply Solar project is to build a sustainble, affordable, and durable sorce of power for use in public spaces and rural communites.</p>
+		<p>The project utilizes easy to understand technology like car batteries to store power for later consumption. With the technical mystisism surrounding solar technology, there is unique spot for an understandable source to be utilized.</p>
+		<p>Accompanied by a sustainable design, Simply Solar aims to put simple solar technology in the hands of traditionally overlooked markets. The aim is to develop the technology to a point that allows it to be obtained and utilized in third world countries, providing a reliable source of energy.</p>
+	  <img src="#">
+	</div>
+
+	<div id="banner" class="container">
+		<h1>Gamification</h1>
+		<HR color="#AAAAAA">
+		<p>The goal of the Simply Solar project is to build a sustainble, affordable, and durable sorce of power for use in public spaces and rural communites.</p>
+		<p>The project utilizes easy to understand technology like car batteries to store power for later consumption. With the technical mystisism surrounding solar technology, there is unique spot for an understandable source to be utilized.</p>
+		<p>Accompanied by a sustainable design, Simply Solar aims to put simple solar technology in the hands of traditionally overlooked markets. The aim is to develop the technology to a point that allows it to be obtained and utilized in third world countries, providing a reliable source of energy.</p>
+    <img src="#">
+	</div>
+	
+	<div id="banner" class="container">
+		<h1>Gamification</h1>
+		<HR color="#AAAAAA">
+		<p>The goal of the Simply Solar project is to build a sustainble, affordable, and durable sorce of power for use in public spaces and rural communites.</p>
+		<p>The project utilizes easy to understand technology like car batteries to store power for later consumption. With the technical mystisism surrounding solar technology, there is unique spot for an understandable source to be utilized.</p>
+		<p>Accompanied by a sustainable design, Simply Solar aims to put simple solar technology in the hands of traditionally overlooked markets. The aim is to develop the technology to a point that allows it to be obtained and utilized in third world countries, providing a reliable source of energy.</p>
+    <img src="#">
+	</div>
+
+
+
+</div>
+<div id="footer">
+	<div class="container">
+		<div class="fbox1">
+		<ul>
+			<li><i class="material-icons md-36 md-light">person pin</i></li>
+			<li><a href="https://www.google.com/maps?ion=1&espv=2&q=rolla+mo&bav=on.2,or.r_cp.&biw=1366&bih=600&dpr=1&um=1&ie=UTF-8&sa=X&ved=0ahUKEwiMhNi1mrTJAhWIOj4KHSSfAncQ_AUIBigB">Rolla MO 65401</a></li>
+		</ul>
+		</div>
+		<div class="fbox1">
+		<ul>
+			<li><i class="material-icons md-light md-36">phone in talk</i></li>
+			<li><p>Telephone: +1 417 315 2575</p></li>
+		</ul>
+		</div>
+		<div class="fbox1">
+		<ul>
+			<li><i class="material-icons md-light md-36">mail outline</i></li>
+			<li><a href="cms5y7@mst.edu">cms5y7@mst.edu</a></li>
+		</ul>
+		</div>
+	</div>
+</div>
+<div id="copyright">
+	<p>&copy; Untitled. All rights reserved.</p>
+	<ul class="contact">
+		<li><a href="https://www.facebook.com/connor.sprague.9" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454209/65343c90-95ea-11e5-80a7-b87bc5e321ab.png"></img></a></li>
+		<li><a href="https://www.linkedin.com/in/connor-sprague-30141b72" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454224/a51327d6-95ea-11e5-9d7a-7dd9b3195073.png"></img></a></li>
+		<li><a href="https://www.youtube.com/channel/UCjOXZoLIOcxtw0W5wEbLHeg" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454230/bc3b8b9c-95ea-11e5-9298-4d977b311e1f.png"></img></a></li>
+	</ul>
+</div>
+</body>
+</html>
 
