--- a/words/research.html
+++ b/words/research.html
@@ -56,7 +56,7 @@ https://www.iconfinder.com/marcosebald
 	 		<img src="#">
 	 		</div>
 	</div>
-
+	<div class="clear"></div>
 	<div id="banner" class="container">
 		<h1>Gamification</h1>
 		<HR color="#AAAAAA">
