--- a/words/research.html
+++ b/words/research.html
@@ -60,24 +60,27 @@ https://www.iconfinder.com/marcosebald
 	<div id="banner" class="container">
 		<h1>Gamification</h1>
 		<HR color="#AAAAAA">
-		<p>The goal of the Simply Solar project is to build a sustainble, affordable, and durable sorce of power for use in public spaces and rural communites.</p>
-		<p>The project utilizes easy to understand technology like car batteries to store power for later consumption. With the technical mystisism surrounding solar technology, there is unique spot for an understandable source to be utilized.</p>
-		<p>Accompanied by a sustainable design, Simply Solar aims to put simple solar technology in the hands of traditionally overlooked markets. The aim is to develop the technology to a point that allows it to be obtained and utilized in third world countries, providing a reliable source of energy.</p>
-    <img src="#">
+			<div id="left">
+			<p class="two-column-text">The goal of the Simply Solar project is to build a sustainble, affordable, and durable sorce of power for use in public spaces and rural communites.</p>
+			</div>
+	  		<div id="right">
+	 		<img src="#">
+	 		</div>
 	</div>
-	
+	<div class="clear"></div>
 	<div id="banner" class="container">
 		<h1>Gamification</h1>
 		<HR color="#AAAAAA">
-		<p>The goal of the Simply Solar project is to build a sustainble, affordable, and durable sorce of power for use in public spaces and rural communites.</p>
-		<p>The project utilizes easy to understand technology like car batteries to store power for later consumption. With the technical mystisism surrounding solar technology, there is unique spot for an understandable source to be utilized.</p>
-		<p>Accompanied by a sustainable design, Simply Solar aims to put simple solar technology in the hands of traditionally overlooked markets. The aim is to develop the technology to a point that allows it to be obtained and utilized in third world countries, providing a reliable source of energy.</p>
-    <img src="#">
+			<div id="left">
+			<p class="two-column-text">The goal of the Simply Solar project is to build a sustainble, affordable, and durable sorce of power for use in public spaces and rural communites.</p>
+			</div>
+	  		<div id="right">
+	 		<img src="#">
+	 		</div>
 	</div>
-
-
-
+	<div class="clear"></div>
 </div>
+<div class="buffer"></div>
 <div id="footer">
 	<div class="container">
 		<div class="fbox1">
