--- a/words/research.html
+++ b/words/research.html
@@ -83,7 +83,7 @@ https://www.iconfinder.com/marcosebald
 			 This paper is to be an extension of the paper shown. The paper focuses on the utilization of heuristic methods to model and impact peak power consumption in a manufacturing enviornment. </p>
 			</div>
 	  		<div id="right">
-	 		<iframe src="../pdfs/sun_zeyi" style="width:100%; height:500px;" frameborder="0"></iframe>
+	 		<iframe src="../pdfs/sun_zeyi.pdf" style="width:100%; height:500px;" frameborder="0"></iframe>
 	 		</div>
 	</div>
 	<div class="clear"></div>
