Updated Works pages
favicon
minor fixes

--- a/works/hpv.html
+++ b/works/hpv.html
@@ -49,6 +49,7 @@ https://www.iconfinder.com/marcosebald
 <div class="wrapper">
 	<div id="banner" class="container">
 		<h1>Missouri S&T Human Powered Vehicle</h1>
+		<HR color="#AAAAAA">
 	</div>
 	<div id="banner" class="container">
 		<p><b>Human Powered Vehicle</b> is an ASME sponsored college student design competition focues on the design and construction of high efficiency human powered vehicles.</p>
