--- a/works/cb.html
+++ b/works/cb.html
@@ -14,7 +14,8 @@ https://www.iconfinder.com/marcosebald
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="description" content="Web development examples. Uses SlidesJS, a simple slideshow plugin for jQuery.">
+<link rel="icon" type="image/png" href="https://cloud.githubusercontent.com/assets/16012579/12364939/3f4a9e84-bb97-11e5-906c-40af48fdf731.png" sizes="16x16" />
+<meta name="description" content="An expose of my start up work">
 <meta name="viewport" content="width=device-width">
 <title>Curetteblade Project</title>
 <meta name="keywords" content="Curetteblade" />
