--- a/works/hpv.html
+++ b/works/hpv.html
@@ -68,7 +68,8 @@ https://www.iconfinder.com/marcosebald
 		<h2>Pictures</h2>
 		<HR color="#AAAAAA">
     			<div id="slides">
-			<img src="https://cloud.githubusercontent.com/assets/16012579/12364177/d36de5b2-bb92-11e5-9ed9-d942b4ef6259.jpg" alt="#">
+				<img src="https://cloud.githubusercontent.com/assets/16012579/12364177/d36de5b2-bb92-11e5-9ed9-d942b4ef6259.jpg" alt="#">
+				<img src="https://cloud.githubusercontent.com/assets/16012579/12368643/fc64db40-bbb2-11e5-9f9f-7fd5340ff61d.JPG" alt="#">
       			<img src="https://cloud.githubusercontent.com/assets/16012579/12364573/066bde9a-bb95-11e5-9988-feab14a880eb.PNG" alt="#">
       			<img src="https://cloud.githubusercontent.com/assets/16012579/12364574/0679906c-bb95-11e5-9387-90f1c2912fee.PNG" alt="#">
       			<img src="https://cloud.githubusercontent.com/assets/16012579/12364575/067ad4cc-bb95-11e5-85f8-b273c9ea7d16.PNG" alt="#">
